2002-06-15  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOutlineView.m a number of improvements:
	-setDataSource now uses the CHECK_REQUIRED macro to check 
	for required methods instead of iterating over a list of strings.
	-expandItem:expandChildren: corrected bug which prevented the method
	from working correctly when expandChildren is YES.
	-collapseItem:collapseChildren: corrected bug which prevented the 
	method from working correctly when expandChildren is YES.
	
2002-06-12  Alexander Malmberg  <alexander@malmberg.org>

	* Source/GSServicesManager.m (-rebuildServicesMenu): Disable auto-
	enabling while updating the menu.

2002-06-12  Alexander Malmberg  <alexander@malmberg.org>

	* Source/GSServicesManager.m (-loadServices): Only update timestamp
	when the file has changed.
	(-rebuildServicesMenu): Correctly remove the old menu items.

Tue Jun 11 14:11:22 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Patch by Jeff Teunissen with changes by myself:
	* TextConverters/RTF/RTFConsumer.h (GSTextConsumer): Added ivar _class.
	* TextConverters/RTF/RTFConsumer.m: Changed everywhere to support the 
	caller specifying the type of class it needs to be produced.
	* Headers/gnustep/gui/GSTextConverter.h: Added a class argument to
	have the text converter save the results of parsing into
	attributed strings of different classes depending on the case.
	* Source/NSAttributedString.m: When parsing using the text converters,
	have them create attributed strings of our own class.
	
Tue Jun 11 13:35:41 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* TextConverters/RTF/GNUmakefile.preamble (ADDITIONAL_CPPFLAGS):
	Use -Wall when compiling.
	
2002-06-10  Adam Fedor  <fedor@gnu.org>

	* Version 0.7.8
	* Documentation/news.texi: Update

2002-06-11  Alexander Malmberg  <alexander@malmberg.org>

	* Source/GSServicesManager.m,
	Headers/gnustep/gui/GSServicesManager.h: Fix handling of
	NSMenuItem:s (were being handled as NSCell:s in many places; this